src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Bankruptcy_Court__c</fullName>
        <label>Bankruptcy Court</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Debtor_Offer_Rate__c</fullName>
        <label>Default Debtor Offer Rate</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <label>LeadType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sold to other</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Govt Agency</fullName>
                </value>
                <value>
                    <fullName>Inter-company</fullName>
                </value>
                <value>
                    <fullName>Bankrupt-specific Excluded Creditors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>this field will allow users to provide the account with a status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Unsettled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Bankruptcies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Bankruptcy</value>
        </filters>
        <label>Bankruptcies</label>
    </listViews>
    <listViews>
        <fullName>Debtor_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Debtors</value>
        </filters>
        <label>Debtor Accounts</label>
    </listViews>
    <listViews>
        <fullName>Excluded_Creditors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Bankrupt-specific Excluded Creditors</value>
        </filters>
        <label>Excluded Creditors</label>
    </listViews>
    <listViews>
        <fullName>Existing_Creditors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Creditors</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Existing Client</value>
        </filters>
        <label>Existing Creditors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Bankruptcy</fullName>
        <active>true</active>
        <description>this record type will hold all Bankruptcies</description>
        <label>Bankruptcy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Creditor_DoNotMail</fullName>
        <active>true</active>
        <description>this will hold all Creditors (DoNotMail) accounts</description>
        <label>Creditor (DoNotMail)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Creditors</fullName>
        <active>true</active>
        <description>this will hold all potential clients and existing clients. negotiating, unsettled and settled claims</description>
        <label>Creditors (Client)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debtors</fullName>
        <active>true</active>
        <description>this will hold all debtors acounts</description>
        <label>Debtors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_Account_is_required</fullName>
        <active>true</active>
        <description>this rule will ensure that a parent account is populated when the account type is in (BankruptcySpecific, SoldToOther,
Inter-company and client and potential client)</description>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Type, &quot;Potential Client&quot;),
        ISPICKVAL(Type, &quot;Client&quot;),
        ISPICKVAL(Type, &quot;Bankrupt-specific Excluded Creditors&quot;),
        ISPICKVAL(Type, &quot;Inter-company&quot;),
        ISPICKVAL(Type, &quot;Sold to other&quot;)
    ),
    ISBLANK(ParentId)
)</errorConditionFormula>
        <errorMessage>You must provide a parent account for this account</errorMessage>
    </validationRules>
</CustomObject>